# ObjectDetection

./: .gitignore  Dockerfile  README.md  docker-compose.yml  notes  pyproject.toml
app/: main.py  model.py
data/: test_data.csv
models/: model_v1.joblib
notebooks/: camera_ultralytics.ipynb  camera_ultralytics_yolo8.ipynb  torch.ipynb  torch_DETR.ipynb  torch_deeplabv3.ipynb  torch_facenet.ipynb  torch_facenet_face_tracking.ipynb  torch_facenet_video.ipynb  torch_fasterrcnn_resnet50.ipynb  torchvideo_detectron2.ipynb  train_model.ipynb  yolo4_cv2.ipynb
templates/: home.html
tests/: test_server.py
